test/trivial/diten/printvisibleWrongName.good
printvisibleWrongName.chpl:2: error: the argument to get visible symbols must be a named expression named ignoreInternalModules
